# parallel_boruvka

./: CMakeLists.txt  README.md  boruvka.cpp  latch.h  mpsc_queue.h  parallel_dsu.h  readme.md  thread_safe_vector.h
benchmarks/: CMakeLists.txt  boruvka_benchmark.cpp  is_prime.cpp  is_prime_fast.cpp
boruvka_lib/: CMakeLists.txt  boruvka.cpp  boruvka.h  latch.h  parallel_dsu.cpp  parallel_dsu.h
is_prime_lib/: is_prime.cpp  is_prime.h
random_graphs_lib/: CMakeLists.txt  random_graphs.cpp  random_graphs.h
tests/: CMakeLists.txt  KruskalCheck.h  test_boruvka_correctness.cpp  test_is_prime.cpp  test_is_prime_fast.cpp
